--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>POO</title>
-        <script defer src="main.js"></script>
+        <script defer src="Persona.js"></script>
+        <script defer src="Lider.js"></script>
+        <script defer src="Entrenador.js"></script>
+        <script defer src="Pokemon.js"></script>
+        <script defer src="batalla_pokemon.js"></script>
     </head>
     <body>
         
